--- a/Frontend Mentor/Tip Calculator App/style.css
+++ b/Frontend Mentor/Tip Calculator App/style.css
@@ -217,7 +217,10 @@ footer {
 }
 @media screen and (min-width: 1024px) {
   header {
-    height: 20%;
+    height: 18em;
+  }
+  header #logo {
+    margin-top: 8em;
   }
 
   main {
@@ -228,6 +231,11 @@ footer {
     transform: translateX(-50%);
     padding: 2%;
     border-radius: 1.5em;
+  }
+
+  label {
+    font-size: 0.8em;
+    margin-bottom: 0.5em;
   }
 
   #tip-calculator {
@@ -244,8 +252,10 @@ footer {
   }
 
   .calculations {
-    display: block;
+    display: flex;
     height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .tip-values {
@@ -253,8 +263,13 @@ footer {
     grid-template-rows: 1fr 1fr;
   }
 
-  #reset {
-    position: relative;
+  footer {
+    position: absolute;
     bottom: 0;
+    width: 100%;
+  }
+
+  .attribution {
+    width: 100%;
   }
 }
