--- a/Frontend Mentor/Tip Calculator App/style.scss
+++ b/Frontend Mentor/Tip Calculator App/style.scss
@@ -124,6 +124,7 @@ button {
     font-size: 1.5em;
     font-family: $font-stack;
     font-weight: 700;
+    cursor: pointer;
 }
 
 button.selected {
@@ -193,6 +194,7 @@ input[type=reset] {
     font-family: $font-stack;
     font-size: 1.5em;
     padding: .3em 0;
+    cursor: pointer;
 }
 
 
@@ -221,11 +223,16 @@ footer {
         overflow: hidden;
     }
 
-    header #logo {
-        margin: 4em 0;
+    header {
+        height: 20%;
+
+        #logo {
+            margin: 12% 0;
+        }
     }
 
     main {
+        height: 80%;
         padding: 10%;
     }
 
@@ -238,6 +245,21 @@ footer {
 }
 
 @media screen and (min-width: 1024px){
+    header {
+        height: 30%;
+
+        #logo {
+            margin: 16% 0;
+        }
+    }
+
+    main {
+        height: 70%;
+    }
+}
+    
+
+@media screen and (min-width: 1200px){
     
     header {
         height: 18em;
@@ -245,8 +267,6 @@ footer {
         #logo {
             margin-top: 8em;
         }
-
-   
     }
 
     main {
