--- a/Frontend Mentor/Calculator App/style.scss
+++ b/Frontend Mentor/Calculator App/style.scss
@@ -1,8 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap');
+
+$theme-1-secondary-color: hsl(225, 21%, 49%);
+$theme-1-accent-color: hsl(6, 63%, 50%);
+
+$theme-2-secondary-color: hsl(185, 42%, 37%);
+$theme-2-accent-color: hsl(25, 98%, 40%);
+
+$theme-3-secondary-color: hsl(281, 89%, 26%);
+$theme-3-accent-color: hsl(285, 91%, 52%);
+
+$font-stack: 'Spartan', sans-serif;
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: 0;
 }
+
+html, body {
+    height: 100%;
+}
+
+body {
+    font-family: $font-stack;
+    color: #fff;
+    padding: 6%;
+
+    &.theme-1 {
+        background-color: hsl(222, 26%, 31%);
+    }
+    &.theme-2 {
+        background-color: hsl(0, 0%, 90%);
+    }
+    &.theme-3 {
+        background-color: hsl(268, 75%, 9%);
+    }
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-size: 2em;
+
+    &.theme-1 {
+        color: #fff;
+    }
+    &.theme-2 {
+        color: hsl(60, 10%, 19%);
+    }
+    &.theme-3 {
+        color: hsl(52, 100%, 62%);
+    }
+}
+
+
+#display-box {
+    width: 100%;
+    &.theme-1 {
+        background-color: hsl(224, 36%, 15%);
+    }   
+    &.theme-2 {
+        background-color: hsl(0, 0%, 93%);
+    } 
+    &.theme-3 {
+        background-color: hsl(268, 71%, 12%);
+    }
+}
+
+
+
+
 
 .attribution { 
     font-size: 11px; text-align: center; 
