--- a/Frontend Mentor/Calculator App/style.scss
+++ b/Frontend Mentor/Calculator App/style.scss
@@ -60,6 +60,8 @@ header {
 
 #display-box {
     width: 100%;
+    display: block;
+
     &.theme-1 {
         background-color: hsl(224, 36%, 15%);
     }   
@@ -69,6 +71,39 @@ header {
     &.theme-3 {
         background-color: hsl(268, 71%, 12%);
     }
+}
+
+#keys-container {
+    width: 100%;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+
+    &.theme-1 {
+        background-color: hsl(223, 31%, 20%);
+    }
+
+    &.theme-2 {
+        background-color: hsl(0, 5%, 81%);
+    }
+
+    &.theme-3 {
+        background-color: hsl(268, 71%, 12%);
+    }
+
+    button {
+        font-family: $font-stack;
+        font-size: 2em;
+    }
+
+    .reset {
+        grid-column: 1 / span 2;
+    }
+
+    .equals {
+        grid-column: 3 / span 2;
+    }
+
 }
 
 
