--- a/Frontend Mentor/Calculator App/style.scss
+++ b/Frontend Mentor/Calculator App/style.scss
@@ -61,6 +61,7 @@ header {
 #display-box {
     width: 100%;
     display: block;
+    text-align: right;
 
     &.theme-1 {
         background-color: hsl(224, 36%, 15%);
@@ -74,10 +75,10 @@ header {
 }
 
 #keys-container {
-    width: 100%;
     display: grid;
     grid-template-rows: repeat(5, 1fr);
     grid-template-columns: repeat(4, 1fr);
+    padding: 3%;
 
     &.theme-1 {
         background-color: hsl(223, 31%, 20%);
@@ -93,15 +94,54 @@ header {
 
     button {
         font-family: $font-stack;
-        font-size: 2em;
+        font-size: 1.8em;
+        border: none;
+
+        &.theme-1 {
+            background-color: hsl(30, 25%, 89%);
+        }   
+        &.theme-2 {
+            background-color: hsl(45, 7%, 89%);
+        } 
+        &.theme-3 {
+            background-color: hsl(268, 47%, 21%);
+        }
+
     }
 
     .reset {
         grid-column: 1 / span 2;
     }
 
+    .reset, .del {
+        color: #fff;
+        font-size: 1em;
+
+        &.theme-1 {
+            background-color: $theme-1-secondary-color;
+        }   
+        &.theme-2 {
+            background-color: $theme-2-secondary-color;
+        } 
+        &.theme-3 {
+            background-color: $theme-3-secondary-color;
+        }
+    }
+
     .equals {
+        color: #fff;
+        font-size: 1em;
         grid-column: 3 / span 2;
+
+        &.theme-1 {
+            background-color: $theme-1-accent-color;
+        }   
+        &.theme-2 {
+            background-color: $theme-2-accent-color;
+        } 
+        &.theme-3 {
+            background-color: $theme-3-accent-color;
+        }
     }
 
 }
