--- a/Frontend Mentor/Calculator App/style.scss
+++ b/Frontend Mentor/Calculator App/style.scss
@@ -14,7 +14,7 @@ $font-stack: 'Spartan', sans-serif;
 * {
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
 html, body {
@@ -25,6 +25,9 @@ body {
     font-family: $font-stack;
     color: #fff;
     padding: 6%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     &.theme-1 {
         background-color: hsl(222, 26%, 31%);
@@ -36,6 +39,7 @@ body {
         background-color: hsl(268, 75%, 9%);
     }
 }
+
 
 header {
     display: flex;
@@ -57,9 +61,15 @@ header {
     }
 }
 
+main {
+    width: 100%;
+}
 
 #display-box {
     width: 100%;
+    height: 5em;
+    border-radius: 10px;
+    margin-bottom: 1.4em;
     display: block;
     text-align: right;
 
@@ -74,11 +84,24 @@ header {
     }
 }
 
-#keys-container {
+.keys-container {
+    position: relative;
+    width: 100%;
+    display: block;
+    height: auto;
+    z-index: 0;
+}
+
+#keypad {
+    position: relative;
+    width: 100%;
     display: grid;
+    border-radius: 10px;
     grid-template-rows: repeat(5, 1fr);
     grid-template-columns: repeat(4, 1fr);
-    padding: 3%;
+    padding: 6% 6% 7% 6%;
+    gap: 1em;
+
 
     &.theme-1 {
         background-color: hsl(223, 31%, 20%);
@@ -93,18 +116,47 @@ header {
     }
 
     button {
+        position: relative;
         font-family: $font-stack;
-        font-size: 1.8em;
+        font-size: 1.5em;
         border: none;
+        border-radius: 5px;
+        padding: .7em 0;
 
         &.theme-1 {
             background-color: hsl(30, 25%, 89%);
+
+            &::after {
+                background-color: hsl(28, 16%, 65%);
+            }
         }   
+
         &.theme-2 {
             background-color: hsl(45, 7%, 89%);
+
+            &::after {
+                background-color: hsl(35, 11%, 61%);
+            }
         } 
+
         &.theme-3 {
             background-color: hsl(268, 47%, 21%);
+
+            &::after {
+                background-color: hsl(290, 70%, 36%);
+            }
+        }
+
+
+       &::after {
+            content: '';
+            border-radius: 5px;
+            position: absolute;
+            z-index: -1;
+            height: 100%;
+            width: 100%;
+            top: 5px;
+            left: 0;
         }
 
     }
@@ -151,7 +203,7 @@ header {
 
 
 .attribution { 
-    font-size: 11px; text-align: center; 
+    font-size: .5em; text-align: center; 
 }
 
 .attribution a { 
