--- a/Frontend Mentor/Calculator App/style.css
+++ b/Frontend Mentor/Calculator App/style.css
@@ -52,11 +52,12 @@ main {
 
 #display-box {
   width: 100%;
-  height: 5em;
   border-radius: 10px;
-  margin-bottom: 1.4em;
+  margin-bottom: 0.5em;
   display: block;
   text-align: right;
+  padding: 7% 7% 5% 7%;
+  font-size: 2.6em;
 }
 #display-box.theme-1 {
   background-color: #182034;
@@ -100,36 +101,21 @@ main {
   font-family: "Spartan", sans-serif;
   font-size: 1.5em;
   border: none;
+  box-shadow: 0 5px black;
   border-radius: 5px;
-  padding: 0.7em 0;
+  padding: 0.7em 0 0.6em 0;
 }
 #keypad button.theme-1 {
   background-color: #eae3dc;
-}
-#keypad button.theme-1::after {
-  background-color: #b4a597;
+  box-shadow: 0 5px #b4a597;
 }
 #keypad button.theme-2 {
   background-color: #e5e4e1;
-}
-#keypad button.theme-2::after {
-  background-color: #a69d91;
+  box-shadow: 0 5px #a69d91;
 }
 #keypad button.theme-3 {
   background-color: #341c4f;
-}
-#keypad button.theme-3::after {
-  background-color: #871c9c;
-}
-#keypad button::after {
-  content: "";
-  border-radius: 5px;
-  position: absolute;
-  z-index: -1;
-  height: 100%;
-  width: 100%;
-  top: 5px;
-  left: 0;
+  box-shadow: 0 5px #871c9c;
 }
 #keypad .reset {
   grid-column: 1/span 2;
@@ -140,12 +126,15 @@ main {
 }
 #keypad .reset.theme-1, #keypad .del.theme-1 {
   background-color: #637097;
+  box-shadow: 0 5px #404e72;
 }
 #keypad .reset.theme-2, #keypad .del.theme-2 {
   background-color: #377f86;
+  box-shadow: 0 5px #1b5f65;
 }
 #keypad .reset.theme-3, #keypad .del.theme-3 {
   background-color: #58077d;
+  box-shadow: 0 5px #bc15f4;
 }
 #keypad .equals {
   color: #fff;
@@ -154,12 +143,15 @@ main {
 }
 #keypad .equals.theme-1 {
   background-color: #d03f2f;
+  box-shadow: 0 5px #93261a;
 }
 #keypad .equals.theme-2 {
   background-color: #ca5502;
+  box-shadow: 0 5px #893901;
 }
 #keypad .equals.theme-3 {
   background-color: #bc15f4;
+  box-shadow: 0 5px #6cf9f2;
 }
 
 .attribution {
