--- a/Frontend Mentor/Calculator App/style.scss
+++ b/Frontend Mentor/Calculator App/style.scss
@@ -67,11 +67,12 @@ main {
 
 #display-box {
     width: 100%;
-    height: 5em;
     border-radius: 10px;
-    margin-bottom: 1.4em;
+    margin-bottom: .5em;
     display: block;
     text-align: right;
+    padding: 7% 7% 5% 7%;
+    font-size: 2.6em;
 
     &.theme-1 {
         background-color: hsl(224, 36%, 15%);
@@ -120,44 +121,27 @@ main {
         font-family: $font-stack;
         font-size: 1.5em;
         border: none;
+        box-shadow: 0 5px black;
         border-radius: 5px;
-        padding: .7em 0;
+        padding: .7em 0 .6em 0;
 
         &.theme-1 {
             background-color: hsl(30, 25%, 89%);
-
-            &::after {
-                background-color: hsl(28, 16%, 65%);
-            }
+            box-shadow: 0 5px hsl(28, 16%, 65%);
         }   
 
         &.theme-2 {
             background-color: hsl(45, 7%, 89%);
-
-            &::after {
-                background-color: hsl(35, 11%, 61%);
-            }
+            box-shadow: 0 5px hsl(35, 11%, 61%);
         } 
 
         &.theme-3 {
             background-color: hsl(268, 47%, 21%);
-
-            &::after {
-                background-color: hsl(290, 70%, 36%);
-            }
+            box-shadow: 0 5px hsl(290, 70%, 36%);
         }
 
 
-       &::after {
-            content: '';
-            border-radius: 5px;
-            position: absolute;
-            z-index: -1;
-            height: 100%;
-            width: 100%;
-            top: 5px;
-            left: 0;
-        }
+
 
     }
 
@@ -171,12 +155,15 @@ main {
 
         &.theme-1 {
             background-color: $theme-1-secondary-color;
+            box-shadow: 0 5px hsl(224, 28%, 35%);
         }   
         &.theme-2 {
             background-color: $theme-2-secondary-color;
+            box-shadow: 0 5px hsl(185, 58%, 25%);
         } 
         &.theme-3 {
             background-color: $theme-3-secondary-color;
+            box-shadow: 0 5px hsl(285, 91%, 52%);
         }
     }
 
@@ -187,12 +174,15 @@ main {
 
         &.theme-1 {
             background-color: $theme-1-accent-color;
+            box-shadow: 0 5px hsl(6, 70%, 34%);
         }   
         &.theme-2 {
             background-color: $theme-2-accent-color;
+            box-shadow: 0 5px hsl(25, 99%, 27%);
         } 
         &.theme-3 {
             background-color: $theme-3-accent-color;
+            box-shadow: 0 5px hsl(177, 92%, 70%);
         }
     }
 
