--- a/Frontend Mentor/Calculator App/style.css
+++ b/Frontend Mentor/Calculator App/style.css
@@ -32,6 +32,35 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+header input[type=range] {
+  -webkit-appearance: none;
+  width: 20%;
+  height: 26px;
+  padding: 0 5px;
+  background: #232c43;
+  border-radius: 5em;
+  cursor: pointer;
+}
+header input[type=range]:focus {
+  outline: none;
+}
+header input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background-color: #d03f2f;
+}
+header input[type=range]::-moz-range-track {
+  width: 20%;
+}
+header input[type=range]::-moz-range-thumb {
+  background-color: #d03f2f;
+  border: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+}
 
 .logo {
   font-size: 2em;
@@ -73,12 +102,12 @@ main {
   position: relative;
   width: 100%;
   display: block;
-  height: auto;
   z-index: 0;
 }
 
 #keypad {
   position: relative;
+  height: 60vh;
   width: 100%;
   display: grid;
   border-radius: 10px;
