--- a/Frontend Mentor/Calculator App/style.scss
+++ b/Frontend Mentor/Calculator App/style.scss
@@ -62,6 +62,14 @@ header {
     }
 
 
+    .theme-selector {
+        display: flex;
+        align-items: flex-end;
+    }
+    .toggle-label {
+        align-self: end;
+    }
+
     .toggle-options-label {
         display: inline;
         width: 40%;
