--- a/Frontend Mentor/Calculator App/style.css
+++ b/Frontend Mentor/Calculator App/style.css
@@ -2,7 +2,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html, body {
@@ -13,86 +14,184 @@ body {
   font-family: "Spartan", sans-serif;
   color: #fff;
   padding: 6%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  /* &.theme-1 {
+        background-color: hsl(222, 26%, 31%);
+    }
+    &.theme-2 {
+        background-color: hsl(0, 0%, 90%);
+    }
+    &.theme-3 {
+        background-color: hsl(268, 75%, 9%);
+    }*/
 }
+
+/* Theming */
 body.theme-1 {
   background-color: #3a4764;
 }
+
+body.theme-1 .logo {
+  color: #fff;
+}
+
+body.theme-1 .theme-toggle {
+  background: #232c43;
+}
+
+body.theme-1 .theme-toggle::-webkit-slider-thumb {
+  background-color: #d03f2f;
+}
+
+body.theme-1 .theme-toggle::-moz-range-thumb {
+  background-color: #d03f2f;
+}
+
 body.theme-2 {
   background-color: #e6e6e6;
 }
+
+body.theme-2 .logo {
+  color: #35352c;
+}
+
+body.theme-2 .theme-toggle {
+  background: #d1cccc;
+}
+
+body.theme-2 .theme-toggle::-webkit-slider-thumb {
+  background-color: #ca5502;
+}
+
+body.theme-2 .theme-toggle::-moz-range-thumb {
+  background-color: #ca5502;
+}
+
 body.theme-3 {
   background-color: #160628;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 0.7em;
-  margin-bottom: 2em;
-}
-header .logo {
-  font-size: 3em;
-}
-header .logo.theme-1 {
-  color: #fff;
-}
-header .logo.theme-2 {
-  color: #35352c;
-}
-header .logo.theme-3 {
+body.theme-3 .logo {
   color: #ffe53d;
 }
-header .theme-selector {
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
+
+body.theme-3 .theme-toggle {
+  background: #1d0934;
 }
+
+body.theme-3 .theme-toggle::-webkit-slider-thumb {
+  background-color: #00e0d1;
+}
+
+body.theme-3 .theme-toggle::-moz-range-thumb {
+  background-color: #00e0d1;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: .7em;
+  margin-bottom: 2em;
+}
+
+header .logo {
+  font-size: 3em;
+  /*&.theme-1 {
+            color: #fff;
+        }
+        &.theme-2 {
+            color: hsl(60, 10%, 19%);
+        }
+        &.theme-3 {
+            color: hsl(52, 100%, 62%);
+        }*/
+}
+
+header .theme-selector {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 header .toggle-label {
   margin-right: 1em;
-  margin-bottom: 0.2em;
+  margin-bottom: .2em;
 }
+
 header .toggle-options-label {
   display: inline;
   width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 0.2em;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: .2em;
 }
+
 header .toggle-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 35%;
 }
+
 header input[type=range] {
   display: inline;
   -webkit-appearance: none;
   width: 100%;
   height: 26px;
   padding: 0 5px;
-  background: #232c43;
   border-radius: 5em;
   cursor: pointer;
 }
+
 header input[type=range]:focus {
   outline: none;
 }
+
 header input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background-color: #d03f2f;
 }
+
 header input[type=range]::-moz-range-track {
   width: 20%;
 }
+
 header input[type=range]::-moz-range-thumb {
-  background-color: #d03f2f;
   border: none;
   height: 16px;
   width: 16px;
@@ -106,18 +205,21 @@ main {
 #display-box {
   width: 100%;
   border-radius: 10px;
-  margin-bottom: 0.5em;
+  margin-bottom: .5em;
   display: block;
   text-align: right;
   padding: 7% 7% 5% 7%;
   font-size: 2.6em;
 }
+
 #display-box.theme-1 {
   background-color: #182034;
 }
+
 #display-box.theme-2 {
   background-color: #ededed;
 }
+
 #display-box.theme-3 {
   background-color: #1d0934;
 }
@@ -133,89 +235,122 @@ main {
   position: relative;
   height: 60vh;
   width: 100%;
+  display: -ms-grid;
   display: grid;
   border-radius: 10px;
-  grid-template-rows: repeat(5, 1fr);
-  grid-template-columns: repeat(4, 1fr);
+  -ms-grid-rows: (1fr)[5];
+      grid-template-rows: repeat(5, 1fr);
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
   padding: 6% 6% 7% 6%;
   gap: 1em;
 }
+
 #keypad.theme-1 {
   background-color: #232c43;
 }
+
 #keypad.theme-2 {
   background-color: #d1cccc;
 }
+
 #keypad.theme-3 {
   background-color: #1d0934;
 }
+
 #keypad button {
   position: relative;
   font-family: "Spartan", sans-serif;
   font-size: 1.5em;
   border: none;
-  box-shadow: 0 5px black;
+  -webkit-box-shadow: 0 5px black;
+          box-shadow: 0 5px black;
   border-radius: 5px;
-  padding: 0.7em 0 0.6em 0;
+  padding: .7em 0 .6em 0;
 }
+
 #keypad button.theme-1 {
   color: #444b5a;
   background-color: #eae3dc;
-  box-shadow: 0 5px #b4a597;
+  -webkit-box-shadow: 0 5px #b4a597;
+          box-shadow: 0 5px #b4a597;
 }
+
 #keypad button.theme-2 {
   color: #35352c;
   background-color: #e5e4e1;
-  box-shadow: 0 5px #a69d91;
+  -webkit-box-shadow: 0 5px #a69d91;
+          box-shadow: 0 5px #a69d91;
 }
+
 #keypad button.theme-3 {
   color: #ffe53d;
   background-color: #341c4f;
-  box-shadow: 0 5px #871c9c;
+  -webkit-box-shadow: 0 5px #871c9c;
+          box-shadow: 0 5px #871c9c;
 }
+
 #keypad .reset {
-  grid-column: 1/span 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
 }
+
 #keypad .reset, #keypad .del {
   font-size: 1em;
 }
+
 #keypad .reset.theme-1, #keypad .del.theme-1 {
   color: #fff;
   background-color: #637097;
-  box-shadow: 0 5px #404e72;
+  -webkit-box-shadow: 0 5px #404e72;
+          box-shadow: 0 5px #404e72;
 }
+
 #keypad .reset.theme-2, #keypad .del.theme-2 {
   color: #fff;
   background-color: #377f86;
-  box-shadow: 0 5px #1b5f65;
+  -webkit-box-shadow: 0 5px #1b5f65;
+          box-shadow: 0 5px #1b5f65;
 }
+
 #keypad .reset.theme-3, #keypad .del.theme-3 {
   color: #fff;
   background-color: #58077d;
-  box-shadow: 0 5px #bc15f4;
+  -webkit-box-shadow: 0 5px #bc15f4;
+          box-shadow: 0 5px #bc15f4;
 }
+
 #keypad .equals {
   font-size: 1em;
-  grid-column: 3/span 2;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 3 / span 2;
 }
+
 #keypad .equals.theme-1 {
   color: #fff;
   background-color: #d03f2f;
-  box-shadow: 0 5px #93261a;
+  -webkit-box-shadow: 0 5px #93261a;
+          box-shadow: 0 5px #93261a;
 }
+
 #keypad .equals.theme-2 {
   color: #fff;
   background-color: #ca5502;
-  box-shadow: 0 5px #893901;
+  -webkit-box-shadow: 0 5px #893901;
+          box-shadow: 0 5px #893901;
 }
+
 #keypad .equals.theme-3 {
   color: #1b2428;
   background-color: #00e0d1;
-  box-shadow: 0 5px #6cf9f2;
+  -webkit-box-shadow: 0 5px #6cf9f2;
+          box-shadow: 0 5px #6cf9f2;
 }
 
 .attribution {
-  font-size: 0.5em;
+  font-size: .5em;
   text-align: center;
 }
 
