--- a/Frontend Mentor/Calculator App/style.scss
+++ b/Frontend Mentor/Calculator App/style.scss
@@ -28,16 +28,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-   /* &.theme-1 {
-        background-color: hsl(222, 26%, 31%);
-    }
-    &.theme-2 {
-        background-color: hsl(0, 0%, 90%);
-    }
-    &.theme-3 {
-        background-color: hsl(268, 75%, 9%);
-    }*/
 }
 
 
@@ -59,7 +49,10 @@ body.theme-1 {
         &::-moz-range-thumb {
             background-color: $theme-1-accent-color;
         }
+    }
 
+    #display-box {
+        background-color: hsl(224, 36%, 15%);
     }
 }
 
@@ -80,7 +73,10 @@ body.theme-2 {
         &::-moz-range-thumb {
             background-color: $theme-2-accent-color;
         }
+    }
 
+    #display-box {
+        background-color: hsl(0, 0%, 93%);
     }
 }
 
@@ -101,8 +97,12 @@ body.theme-3 {
         &::-moz-range-thumb {
             background-color: $theme-3-accent-color;
         }
-
     }
+
+    #display-box {
+        background-color: hsl(268, 71%, 12%);
+    }
+
 }
 
 
@@ -206,7 +206,7 @@ main {
     padding: 7% 7% 5% 7%;
     font-size: 2.6em;
 
-    &.theme-1 {
+    /*&.theme-1 {
         background-color: hsl(224, 36%, 15%);
     }   
     &.theme-2 {
@@ -214,7 +214,7 @@ main {
     } 
     &.theme-3 {
         background-color: hsl(268, 71%, 12%);
-    }
+    }*/
 }
 
 .keys-container {
