--- a/Frontend Mentor/Calculator App/style.scss
+++ b/Frontend Mentor/Calculator App/style.scss
@@ -40,7 +40,7 @@ body.theme-1 {
     }
 
     .theme-toggle {
-        background: hsl(223, 31%, 20%);
+        background-color: hsl(223, 31%, 20%);
 
         &::-webkit-slider-thumb {
             background-color: $theme-1-accent-color;
@@ -54,6 +54,28 @@ body.theme-1 {
     #display-box {
         background-color: hsl(224, 36%, 15%);
     }
+
+    #keypad {
+        background-color: hsl(223, 31%, 20%);
+    }
+
+    .key {
+        color: hsl(221, 14%, 31%);
+        background-color: hsl(30, 25%, 89%);
+        box-shadow: 0 5px hsl(28, 16%, 65%);
+    } 
+
+    .reset, .del {
+        color: #fff;
+        background-color: $theme-1-secondary-color;
+        box-shadow: 0 5px hsl(224, 28%, 35%);
+    }
+
+    .equals {
+        color: #fff;
+        background-color: $theme-1-accent-color;
+        box-shadow: 0 5px hsl(6, 70%, 34%);
+    }
 }
 
 body.theme-2 {
@@ -64,7 +86,7 @@ body.theme-2 {
     }
 
     .theme-toggle {
-        background: hsl(0, 5%, 81%);
+        background-color: hsl(0, 5%, 81%);
 
         &::-webkit-slider-thumb {
             background-color: $theme-2-accent-color;
@@ -78,6 +100,28 @@ body.theme-2 {
     #display-box {
         background-color: hsl(0, 0%, 93%);
     }
+
+    #keypad {
+        background-color: hsl(0, 5%, 81%);
+    }
+
+    .key {
+        color: hsl(60, 10%, 19%);
+        background-color: hsl(45, 7%, 89%);
+        box-shadow: 0 5px hsl(35, 11%, 61%);
+    }
+
+    .reset, .del {
+        color: #fff;
+        background-color: $theme-2-secondary-color;
+        box-shadow: 0 5px hsl(185, 58%, 25%);
+    }
+
+    .equals {
+        color: #fff;
+        background-color: $theme-2-accent-color;
+        box-shadow: 0 5px hsl(25, 99%, 27%);
+    }
 }
 
 body.theme-3 {
@@ -88,7 +132,7 @@ body.theme-3 {
     }
 
     .theme-toggle {
-        background: hsl(268, 71%, 12%);
+        background-color: hsl(268, 71%, 12%);
 
         &::-webkit-slider-thumb {
             background-color: $theme-3-accent-color;
@@ -101,6 +145,28 @@ body.theme-3 {
 
     #display-box {
         background-color: hsl(268, 71%, 12%);
+    }
+
+    #keypad {
+        background-color: hsl(268, 71%, 12%);
+    }
+
+    .key {
+        color: hsl(52, 100%, 62%);
+        background-color: hsl(268, 47%, 21%);
+        box-shadow: 0 5px hsl(290, 70%, 36%);
+    }
+
+    .reset, .del {
+        color: #fff;
+        background-color: $theme-3-secondary-color;
+        box-shadow: 0 5px hsl(285, 91%, 52%);
+    }
+
+    .equals {
+        color: hsl(198, 20%, 13%);
+        background-color: $theme-3-accent-color;
+        box-shadow: 0 5px hsl(177, 92%, 70%);
     }
 
 }
@@ -253,11 +319,11 @@ main {
         font-family: $font-stack;
         font-size: 1.5em;
         border: none;
-        box-shadow: 0 5px black;
+        /*box-shadow: 0 5px black;*/
         border-radius: 5px;
         padding: .7em 0 .6em 0;
 
-        &.theme-1 {
+        /*&.theme-1 {
             color: hsl(221, 14%, 31%);
             background-color: hsl(30, 25%, 89%);
             box-shadow: 0 5px hsl(28, 16%, 65%);
@@ -273,7 +339,7 @@ main {
             color: hsl(52, 100%, 62%);
             background-color: hsl(268, 47%, 21%);
             box-shadow: 0 5px hsl(290, 70%, 36%);
-        }
+        }*/
     }
 
     .reset {
@@ -284,7 +350,7 @@ main {
         
         font-size: 1em;
 
-        &.theme-1 {
+        /*&.theme-1 {
             color: #fff;
             background-color: $theme-1-secondary-color;
             box-shadow: 0 5px hsl(224, 28%, 35%);
@@ -298,7 +364,7 @@ main {
             color: #fff;
             background-color: $theme-3-secondary-color;
             box-shadow: 0 5px hsl(285, 91%, 52%);
-        }
+        }*/
     }
 
     .equals {
@@ -306,7 +372,7 @@ main {
         font-size: 1em;
         grid-column: 3 / span 2;
 
-        &.theme-1 {
+        /*&.theme-1 {
             color: #fff;
             background-color: $theme-1-accent-color;
             box-shadow: 0 5px hsl(6, 70%, 34%);
@@ -320,7 +386,7 @@ main {
             color: hsl(198, 20%, 13%);
             background-color: $theme-3-accent-color;
             box-shadow: 0 5px hsl(177, 92%, 70%);
-        }
+        }*/
     }
 
 }
